# subtitles-ocr

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.serena/: project.yml
docs/: ADR-0001-OCR-Pipeline.md  ADR-0002-Pipeline-Detailed-Design.md  ADR-0003-Animation-Reconstruction.md  ADR-0004-Shared-Infrastructure.md  development.md  distributed-inference.md  inference-setup.md
docs/examples/: README.md
models/: ImageExtractionServiceOutput.py  OcrServiceOutput.py  SubtitleServiceOutput.py
services/: ImageExtractionService.py  OcrService.py  Service.py  ServiceRunner.py  SubtitleService.py  crop_service.py  image_extraction_service.py  ocr_service.py  preprocessing_service.py  service.py  subtitle_service.py
src/main/: extract_frames.py  main.py
src/main/lib/: display_image_with_rects.py  frame_number_to_timestamp.py  handle_keyboard_interrupt.py  print_banner.py  rotated_rectangle.py
src/main/models/: FramesWorkerOutput.py  ImageExtractionServiceOutput.py  OcrWorkerOutput.py  SubtitleEntriesWorkerOutput.py  SubtitleServiceOutput.py  WorkerMessage.py
src/main/orchestrator/: Orchestrator.py  Tui.py
src/main/runners/: ProcessServiceRunner.py  ServiceRunner.py
src/main/scripts/: extract_frames.py  text_detection.py  text_detection_dbnet.py  text_extraction.py  text_extraction_paddle.py  text_grouping.py
src/main/services/: ImageExtractionService.py  OcrService.py  Service.py  SubtitleService.py
src/main/workers/: FramesWorker.py  MaskWorker.py  OcrWorker.py  SubtitleEntriesWorker.py  SubtitleFileWorker.py  Worker.py
src/main/writers/: SubripWriter.py
src/subtitles_ocr/: cli.py  litellm_config.py  models.py
src/subtitles_ocr/pipeline/: analyze.py  extract.py  filter.py  fuzzy_group.py  group.py  prefilter.py  reconcile.py  resume.py  retry.py  serialize.py  skip.py
src/subtitles_ocr/vlm/: client.py  prompt.py
src/test/: main.py
tests/: test_analyze.py  test_cli.py  test_extract.py  test_filter.py  test_fuzzy_group.py  test_group.py  test_litellm_config.py  test_models.py  test_prefilter.py  test_reconcile.py  test_resume.py  test_retry.py  test_serialize.py  test_skip.py  test_vlm_client.py
writers/: SubripWriter.py
