[project]
name = "subtitles-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "opencv-python>=4.12",
  "paddleocr>=3.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cpu = [
  "paddlepaddle==3.1.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0"
]
cu129 = [
  "paddlepaddle-gpu==3.1.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0"
]
rocm = [
  "paddlepaddle==3.1.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-rocm>=3.3.0"
]
xpu = [
  "paddlepaddle==3.1.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-xpu>=3.3.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
    { extra = "cu129" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" }
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" }
]
paddlepaddle = [
  { index = "paddle-cpu", extra = "cpu" },
  { index = "paddle-cpu", extra = "xpu" },
  { index = "paddle-cpu", extra = "rocm" },
]
paddlepaddle-gpu = [
  { index = "paddle-129", extra = "cu129" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
explicit = true
