[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitles-ocr"
version = "0.1.0"
description = "Hardcoded subtitle extractor for anime — outputs .ass files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=11.0",
    "pydantic>=2.0",
    "ollama>=0.4",
    "click>=8.0",
    "tqdm>=4.67.3",
]

[project.scripts]
subtitles-ocr = "subtitles_ocr.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["main*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
